fix for all overflow issues, include hero-section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,6 +133,9 @@ img {
 .navigation {
   position: relative;
   display: flex;
+  max-width: 575px;
+  gap: 8px 0;
+  flex-wrap: wrap;
 }
 
 .catalog-button {
@@ -325,10 +328,12 @@ img {
 .user-menu {
   position: relative;
   display: flex;
+  max-width: 440px;
   align-items: center;
   margin-left: auto;
-  gap: 16px;
+  gap: 8px 16px;
   z-index: 1;
+  flex-wrap: wrap;
 }
 
 .text-link {
@@ -904,6 +909,7 @@ img {
   display: flex;
   width: 1160px;
   margin: 0 auto;
+  margin-bottom: 45.5px;
 }
 
 .slider-container {
@@ -929,9 +935,8 @@ img {
 }
 
 .hero-info {
-  position: relative;
   display: flex;
-  padding: 136.5px 0 138px 65px;
+  padding: 136.5px 0 0 65px;
   flex-direction: column;
 }
 
@@ -980,10 +985,14 @@ img {
 }
 
 .small-icecream {
+  position: absolute;
   display: flex;
+  top: calc(50% - 49px);
+  right: -3.3px;
   align-items: center;
   justify-content: center;
-  padding-top: 10px;
+  margin-left: 0;
+  gap: 44px
 }
 
 .strawberry-small,
@@ -992,11 +1001,10 @@ img {
   position: relative;
   justify-content: center;
   display: flex;
-  width: 100px;
+  width: 66px;
   height: 150px;
   margin-right: 0;
-  gap: 30px;
-  border-left: 41px solid transparent;
+  padding: 0 15.5px 0 15px;
   opacity: 0.4;
   z-index: -2;
 }
@@ -1005,10 +1013,11 @@ img {
   position: absolute;
   display: block;
   content: '';
+  top: 120px;
+  left: 0.3px;
   width: 312px;
   height: 312px;
   border-radius: 50%;
-  top: 99.5px;
   background: #FFCBD8;
   z-index: -1;
 }
@@ -1017,22 +1026,24 @@ img {
   position: absolute;
   display: block;
   content: '';
+  top: 25px;
+  left: -2.7px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background: #FFCBD8;
-  top: 24.5px;
   z-index: -1;
 }
 
 .banana-image::before {
   display: block;
   content: '';
+  top: 120.5px;
+  left: 0.3px;
   width: 312px;
   height: 312px;
   border-radius: 50%;
   position: absolute;
-  top: 99.5px;
   background: #9FC8FF;
   z-index: -1;
 }
@@ -1041,11 +1052,12 @@ img {
   position: absolute;
   display: block;
   content: '';
+  top: 25px;
+  left: -2.7px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background: #9FC8FF;
-  top: 24.5px;
   z-index: -1;
 }
 
@@ -1056,7 +1068,7 @@ img {
   height: 312px;
   border-radius: 50%;
   position: absolute;
-  top: 99.5px;
+  top: 120.5px;
   background: #FCDC92;
   z-index: -1;
 }
@@ -1065,11 +1077,12 @@ img {
   position: absolute;
   display: block;
   content: '';
+  top: 25px;
+  left: -2.7px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background: #FCDC92;
-  top: 24.5px;
   z-index: -1;
 }
 
@@ -1101,20 +1114,20 @@ img {
 
 .slider-check.first,
 .slider-label.first {
-  bottom: 0;
-  left: -5px;
+  bottom: -45.5px;
+  left: -4.5px;
 }
 
 .slider-check.second,
 .slider-label.second {
-  bottom: 0;
-  left: 15.5px;
+  bottom: -45.5px;
+  left: 15.6px;
 }
 
 .slider-check.third,
 .slider-label.third {
-  bottom: 0;
-  left: 35.5px;
+  bottom: -45.5px;
+  left: 35.6px;
 }
 
 .slider-check:checked + .slider-label {
@@ -1151,23 +1164,42 @@ img {
   background-size: 20px 60px;
   border-radius: 50%;
   border: 2px solid #FCFCFC;
+  margin-top: auto;
   cursor: pointer;
   outline: none;
 }
 
+.strawberry-illustration {
+  position: absolute;
+  top: 20px;
+  left: 0.5px;
+}
+
+.banana-illustration {
+  position: absolute;
+  top: 20px;
+  left: 0.5px;
+}
+
+.caramel-illustration {
+  position: absolute;
+  top: 23px;
+  left: 0.5px;
+}
+
 .left {
-  top: 258px;
-  left: 537px;
+  top: calc(50% + 5px);
+  left: 537.5px;
   background: rgba(252, 252, 252, 0.3);
   border: 2px solid #FCFCFC;
   background-image: url("../images/left-btn.svg");
   background-repeat: no-repeat;
   background-position: center center;
+  z-index: 1;
 }
 
+
 .left:hover {
-  top: 258px;
-  left: 537px;
   background: #FCFCFC;
   border: 2px solid #FCFCFC;
   background-image: url("../images/left-black-btn.svg");
@@ -1176,8 +1208,6 @@ img {
 }
 
 .left:focus-visible {
-  top: 258px;
-  left: 537px;
   background: rgba(252, 252, 252, 0.3);
   border: 2px solid #2D3440;
   background-image: url("../images/left-black-btn.svg");
@@ -1187,8 +1217,6 @@ img {
 }
 
 .left:active {
-  top: 258px;
-  left: 537px;
   background: rgba(252, 252, 252, 0.5);
   border: 0;
   background-image: url("../images/left-black-btn.svg");
@@ -1197,8 +1225,6 @@ img {
 }
 
 .left:disabled {
-  top: 258px;
-  left: 537px;
   background: rgba(252, 252, 252, 0.3);
   opacity: 0.4;
   border: 2px solid #FCFCFC;
@@ -1208,18 +1234,17 @@ img {
 }
 
 .right {
-  top: 258px;
+  top: calc(50% + 5px);
   left: 849px;
   background: rgba(252, 252, 252, 0.3);
   border: 2px solid #FCFCFC;
   background-image: url("../images/right-btn.svg");
   background-repeat: no-repeat;
   background-position: center center;
+  z-index: 1;
 }
 
 .right:hover {
-  top: 258px;
-  left: 849px;
   background: #FCFCFC;
   border: 2px solid #FCFCFC;
   background-image: url("../images/right-black-btn.svg");
@@ -1228,8 +1253,6 @@ img {
 }
 
 .right:focus-visible {
-  top: 258px;
-  left: 849px;
   background: rgba(252, 252, 252, 0.3);
   border: 2px solid #2D3440;
   background-image: url("../images/right-black-btn.svg");
@@ -1239,8 +1262,6 @@ img {
 }
 
 .right:active {
-  top: 258px;
-  left: 849px;
   background: rgba(252, 252, 252, 0.5);
   border: 0;
   background-image: url("../images/right-black-btn.svg");
@@ -1249,8 +1270,6 @@ img {
 }
 
 .right:disabled {
-  top: 258px;
-  left: 849px;
   background: rgba(252, 252, 252, 0.3);
   opacity: 0.4;
   border: 2px solid #FCFCFC;
@@ -1259,14 +1278,23 @@ img {
   background-position: center center;
 }
 
+
 .hero-networks {
   position: absolute;
+  display: flex;
+  align-items: center;
+  min-height: 28px;
+  padding: 0;
+  list-style-type: none;
   margin: 0;
   margin-left: 0;
-  bottom: -2px;
-  left: 1057px;
-  gap: 16px 12px;
+  bottom: -49px;
+  right: -0.6%;
+  gap: 16px 13.7px;
+  box-sizing: border-box;
+  flex-wrap: wrap;
 }
+
 
 .button {
   position: relative;
@@ -1761,6 +1789,11 @@ img {
   padding: 26px;
   border-radius: 16px;
   background-color: #FFFFFF;
+
+}
+
+.subscription-container {
+  margin: auto 0;
 }
 
 .subscription-action {
@@ -1901,6 +1934,7 @@ img {
   background-image: url("../images/delivery-background.jpg");
   background-size: cover;
   border-radius: 16px;
+  background-color: #F3F3F4;
 }
 
 .delivery-intro {
@@ -2095,7 +2129,6 @@ img {
   display: block;
   width: 12.42px;
   height: 12.42px;
-  /* line-height: 12px; */
   justify-content: center;
   align-items: center;
   margin-right: auto;
@@ -2202,6 +2235,7 @@ img {
   background-image: url("../images/feedback-bg.jpg");
   background-size: cover;
   border-radius: 16px;
+  background-color: #ECE2E2;
 }
 
 .feedback-title {
@@ -2281,14 +2315,14 @@ img {
   display: flex;
   align-items: center;
   gap: 16px 12px;
-  width: 108px;
+  width: 204px;
   min-height: 28px;
   padding: 0;
   margin: 0;
   margin-left: 3.2px;
-  padding-right: 96px;
   margin-bottom: auto;
   list-style-type: none;
+  flex-wrap: wrap;
 }
 
 .social-link {
@@ -2476,7 +2510,6 @@ img {
 }
 
 /*-- =========== ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ =============== F O O T E R ======================== ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ↑ ====================== --*/
-
 
 
 
